<resources>
    <string name="app_name">DunlapRestaurants</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="not_registered">Not Registered?</string>
</resources>
